# structlint

./: .envrc  .gitignore  404.html  README.md  cli_.html  configuration_.html  contributing.html  flake.nix  index.html  justfile  lefthook.yml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sbom.json  treefmt.toml
.github/workflows/: docs.yml  python-publish.yml
api/: checks.html  cli.html  collection.html  configuration.html  logic.html  regexes.html  reporting.html  utils.html
api/checks/: index.html
api/cli/: index.html
api/collection/: index.html
api/configuration/: index.html
api/logic/: index.html
api/regexes/: index.html
api/reporting/: index.html
api/utils/: index.html
cli_/: index.html
codeqa/configs/: mdsf.json  yamlfmt.yml  yamllint.yml
codeqa/dependencies/deply/: deply.yaml  report.txt
codeqa/dependencies/snakefood/: archlint.dot  group.txt
configuration_/: index.html
contributing/: index.html
docs/md/: configuration_.md  contributing.md  index.md
docs/md/api/: checks.md  cli.md  collection.md  configuration.md  logic.md  regexes.md  reporting.md  utils.md
nix/: custom-packages.nix  uv.nix
scripts/: format-mkdocs.py  git-with-cz.sh  jsonfmt.py  justfmt.sh  last_edit_time.py  lazy_mkdocs.py  lazy_pydeps.py  lazy_sbom.py  perf-flamegraph.sh
src/structlint/: checks.py  cli.py  collection.py  configuration.py  logic.py  regexes.py  reporting.py  utils.py
stylesheets/: extra.css
tests/: conftest.py
tests/_data/: default.toml
tests/unit/: checks_test.py  cli_test.py  collection_test.py  configuration_test.py  logic_test.py  reporting_test.py  utils_test.py
